2001-04-01  Neal H Walfield  <neal@cs.uml.edu>

	* main.c (S_exec_init): Use iohelp_create_empty_iouser.

2001-06-15  Roland McGrath  <roland@frob.com>

	* exec.c (do_exec: user_fd): Add a user ref to returned port.

2001-02-12  Marcus Brinkmann  <marcus@gnu.org>

	* main.c: Change hurd version name from proc to exec.
	(main): Add period to doc string.

2000-10-01  Roland McGrath  <roland@frob.com>

	* exec.c: Comments.

2000-09-24  Roland McGrath  <roland@frob.com>

	* exec.c (map): Bail if the requested position + data size does not
	fit in the file size.

2000-07-26  Mark Kettenis  <kettenis@gnu.org>

	* Makefile (HURDLIBS): Reorder libs such that the threads lib
	comes before the ports lib.  This makes sure the functions in
	libthreads properly override the stubs in libports with the new
	dynamic linker semantics in glibc 2.2.

2000-07-20  Thomas Bushnell, BSG  <tb@mit.edu>

	* hashexec.c (check_hashbang): Count characters in interp
	correctly.  Fix from Kalle Olavi Niemitalo <tosi@stekt.oulu.fi>.

2000-03-23  Mark Kettenis  <kettenis@gnu.org>

	* exec.c (do_exec): Set interp.file to MACH_PORT_NULL before the
	first `goto out'.

2000-03-20  Roland McGrath  <roland@baalperazim.frob.com>

	* main.c (trivfs_allow_open): Initialize to zero.
	(trivfs_support_read, trivfs_support_write): Likewise.
	(trivfs_support_exec): Variable removed.

	* exectrans.c: Obsolete file removed.
	* Makefile (DIST_FILES): Remove it.

2000-03-17  Roland McGrath  <roland@baalperazim.frob.com>

	* hashexec.c (check_hashbang): Use strpbrk directly instead of strsep.
	Fix up INTERP_LEN properly in the no-argument case.

2000-03-17  Thomas Bushnell, BSG  <tb@mit.edu>

	* main.c (S_exec_init): Don't use MOVE_SEND in Hurd RPC.

2000-03-17  Roland McGrath  <roland@baalperazim.frob.com>

	* exec.c (do_exec): Use ports_get_send_right.

2000-03-13  Roland McGrath  <roland@baalperazim.frob.com>

	* priv.h (EXECDATA_STREAM): Define this only #ifdef BFD.